--- a/TareasService/src/Application/appSettings.development.json
+++ b/TareasService/src/Application/appSettings.development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1434;Initial Catalog=Referencias;User ID=sa;password=oSpEcONSQL3578951"
+        "DefaultConnection": "Server=sqldev01;Initial Catalog=Tareas;integrated security=True"
     },
     "Logging": {
         "LogLevel": {
@@ -9,11 +9,11 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "EventBusRetryCount":2,
-    "EventBusUserName":"materiales",
-    "EventBusPassword":"materiales",
-    "EventBusConnection":"192.168.40.33",
-    "SubscriptionClientName":"Referencias",
+    "EventBusRetryCount": 2,
+    "EventBusUserName": "materiales",
+    "EventBusPassword": "materiales",
+    "EventBusConnection": "192.168.40.33",
+    "SubscriptionClientName": "Referencias",
     "AppSettings": {
         "Secret": "gsdfñlkjgsdfñlkjdgfñlgkjdflogkjdflkjglkdfjgkjfkjfkjgfkjgfkjgfkgjfkjgfkjgf",
         "mailSecret": "quieroMandarMail3578951",
