--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,36 +5,21 @@
             "label": "build",
             "command": "dotnet",
             "type": "process",
-            "args": [
-                "build",
-                "${workspaceFolder}/Services/Afiliaciones.Service/src/Application/Application.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
+            "args": ["build", "${workspaceFolder}\\TareasService\\src\\Application\\Application.csproj", "/property:GenerateFullPaths=true", "/consoleloggerparameters:NoSummary"],
             "problemMatcher": "$msCompile"
         },
         {
             "label": "publish",
             "command": "dotnet",
             "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/Services/Afiliaciones.Service/src/Application/Application.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
+            "args": ["publish", "${workspaceFolder}/TareasService/src/Application/Application.csproj", "/property:GenerateFullPaths=true", "/consoleloggerparameters:NoSummary"],
             "problemMatcher": "$msCompile"
         },
         {
             "label": "watch",
             "command": "dotnet",
             "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "--project",
-                "${workspaceFolder}/Services/Afiliaciones.Service/src/Application/Application.csproj"
-            ],
+            "args": ["watch", "run", "--project", "${workspaceFolder}\\TareasService\\src\\Application\\Application.csproj"],
             "problemMatcher": "$msCompile"
         }
     ]
